# pump

./: CLAUDE.md  CMakeLists.txt  LICENSE  agent_test.md  readme.cn.md  readme.md
ai_context/: dpdk_support.md  gpu_scheduler_design.md  net_review.md  rpc_gap_analysis.md  rpc_review.md  rpc_understanding.md  spsc_queue_migration.md  udp_design.md  udp_requirements.md
ai_spec/: AI_Coding_Guidelines.md  CODING_GUIDE.md  CONCURRENCY_MODEL.md  PROJECT_AI_SPEC.md  PUMP_SPEC.md  RPC_DETAIL.md  RUNTIME_MODEL.md  SCHEDULER_SPEC.md  SENDERS_DETAIL.md  SENDERS_SPEC.md  command.md  plan.md  rpc.md  rpc_design.md
apps/: CMakeLists.txt
apps/aisaq/: config.json  main.cc
apps/aisaq/common/: common.hh
apps/aisaq/index/: meta_data.hh  node_data.hh
apps/aisaq/io/: read_node.hh
apps/aisaq/runtime/: config.hh  global_objects.hh  runtime.hh
apps/example/concurrent/: main.cc
apps/example/coro/: main.cc
apps/example/cuda/: main.cc  vector_add_kernel.cu
apps/example/dpdk/: main.cc  run_test.sh  test.py
apps/example/echo/: echo.cc  kcp_echo.hh  main.cc  tcp_echo.hh  udp_echo.hh
apps/example/echo_client/: echo_client.cc
apps/example/hello_world/: pump.cc
apps/example/inference/: chat.sh  main.cc  test_client.py  test_multi.py
apps/example/inference/llm/: scheduler.hh
apps/example/inference/server/: factory.hh  protocol.hh
apps/example/kcp_echo/: kcp_echo.cc
apps/example/kcp_echo_epoll/: kcp_echo.cc
apps/example/nvme/: nvme_impl.hh  nvme_test.cc
apps/example/rpc/: client.hh  kcp_rpc.hh  rpc.cc  rpc_example.cc  server.hh  service.hh  tcp_rpc.hh
apps/example/rpc_echo/: client.cc  server.cc
apps/example/share_nothing/: main.cc
apps/example/udp_echo/: udp_echo.cc
apps/example/udp_echo_epoll/: udp_echo_epoll.cc
apps/kv/: AI_GUIDE.md  main.cc
apps/kv/batch/: allocate_put_id.hh  chose_scheduler.hh  publish.hh  publish_req.hh  request_task.hh  scheduler.hh  snapshot_manager.hh  start.hh
apps/kv/data/: b_tree.hh  batch.hh  cache.hh  compute_key_seed.hh  data_page.hh  exceptions.hh  index.hh  kv.hh  slice.hh  slots.hh  snapshot.hh  ssd.hh  write_span.hh
apps/kv/fs/: allocate.hh  chose_scheduler.hh  free.hh  scheduler.hh
apps/kv/index/: cache.hh  chose_scheduler.hh  get.hh  root.hh  scan.hh  scheduler.hh  update.hh
apps/kv/nvme/: sender.hh
apps/kv/runtime/: config.hh  const.hh  fs.hh  index.hh  init.hh  nvme.hh  scheduler_objects.hh
apps/kv/senders/: apply.hh  as_task.hh  finish_batch.hh  get.hh  make_kv.hh  put.hh  scan.hh  start_batch.hh  start_db.hh  stop_db.hh
apps/kv/ycsb/: statistic.hh  ycsb.hh
apps/test/: concurrent_copy_test.cc  concurrent_loop_test.cc  rpc_concurrent_test.cc  rpc_disconnect_test.cc  rpc_test.cc  rpc_timeout_test.cc  scope_slab_test.cc  scope_stress_test.cc  sequential_test.cc  when_any_test.cc
src/env/common/: frame.hh
src/env/runtime/: runner.hh  share_nothing.hh
src/env/scheduler/cuda/: cuda.cmake  scheduler.hh
src/env/scheduler/dgram/: epoll.hh
src/env/scheduler/kcp/: kcp.hh  transport.hh
src/env/scheduler/kcp/common/: ikcp.hh  struct.hh
src/env/scheduler/kcp/dpdk/: scheduler.hh
src/env/scheduler/kcp/epoll/: scheduler.hh
src/env/scheduler/kcp/io_uring/: scheduler.hh
src/env/scheduler/kcp/senders/: accept.hh  connect.hh  recv.hh  send.hh
src/env/scheduler/net/: net.hh
src/env/scheduler/net/common/: detail.hh  error.hh  errors.hh  frame.hh  frame_receiver.hh  recv_sender.hh  send_sender.hh  session.hh  session_lifecycle.hh  session_tags.hh  struct.hh
src/env/scheduler/net/dgram/: common.hh  dpdk.hh  io_uring.hh
src/env/scheduler/net/epoll/: connect_scheduler.hh  epoll.hh  scheduler.hh
src/env/scheduler/net/io_uring/: connect_scheduler.hh  scheduler.hh
src/env/scheduler/net/kcp/: kcp.cmake  kcp.hh
src/env/scheduler/net/kcp/common/: layers.hh  struct.hh
src/env/scheduler/net/rpc/: rpc.hh
src/env/scheduler/net/senders/: conn.hh  connect.hh  join.hh  recv.hh  send.hh  stop.hh
src/env/scheduler/net/tcp/: tcp.hh
src/env/scheduler/net/udp/: udp.cmake  udp.hh
src/env/scheduler/nvme/: dma.hh  get_page.hh  nvme.cmake  nvme_page.hh  put_page.hh  scheduler.hh  sender.hh  ssd.hh
src/env/scheduler/rpc/: rpc.hh
src/env/scheduler/rpc/channel/: channel.hh  dispatcher.hh  pending_map.hh
src/env/scheduler/rpc/client/: call.hh  trigger.hh
src/env/scheduler/rpc/codec/: raw_codec.hh
src/env/scheduler/rpc/common/: codec_concept.hh  config.hh  error.hh  header.hh  message_type.hh  protocol.hh  rpc_state.hh  service.hh  struct.hh
src/env/scheduler/rpc/senders/: call.hh  notify.hh  recv.hh  reply.hh  send.hh  serve.hh
src/env/scheduler/rpc/server/: serv.hh
src/env/scheduler/rpc/service/: dispatch.hh  service.hh  service_type.hh
src/env/scheduler/rpc/state/: pending_map.hh  registry.hh
src/env/scheduler/rpc/transport/: tcp.hh
src/env/scheduler/task/: sender.hh  tasks_scheduler.hh
src/env/scheduler/tcp/: tcp.cmake  tcp.hh
src/env/scheduler/tcp/common/: detail.hh  error.hh  struct.hh
src/env/scheduler/tcp/epoll/: connect_scheduler.hh  scheduler.hh
src/env/scheduler/tcp/io_uring/: connect_scheduler.hh  scheduler.hh
src/env/scheduler/tcp/senders/: conn.hh  connect.hh  join.hh  recv.hh  send.hh  stop.hh
src/env/scheduler/udp/common/: struct.hh
src/env/scheduler/udp/dpdk/: scheduler.hh
src/env/scheduler/udp/epoll/: scheduler.hh
src/env/scheduler/udp/io_uring/: scheduler.hh
src/env/scheduler/udp/senders/: recv.hh  send.hh
src/pump/core/: bind_back.hh  compute_sender_type.hh  concurrent_copy.hh  context.hh  helper.hh  lock_free_queue.hh  lock_free_state.hh  meta.hh  op_poller.hh  op_pusher.hh  op_tuple_builder.hh  random.hh  ring_queue.hh  scope.hh  tuple_values.hh
src/pump/coro/: base.hh  generator.hh  object.hh  promise.hh
src/pump/sender/: any_exception.hh  await_sender.hh  concurrent.hh  flat.hh  for_each.hh  generate.hh  get_context.hh  get_op_flow.hh  just.hh  maybe.hh  null_receiver.hh  on.hh  pop_context.hh  push_context.hh  reduce.hh  repeat.hh  sequential.hh  submit.hh  then.hh  visit.hh  when_all.hh  when_any.hh  when_skipped.hh
(+31 files in other folders)
